// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copies public key on focus, pages and fills out sign form, signs, sends 1`] = `
<DocumentFragment>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0.25em 0.5em;
  word-wrap: break-word;
}

.c2:hover {
  cursor: pointer;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-5"
  >
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Public Key (PK)
        </span>
      </div>
      <textarea
        aria-label="publicKey"
        class="rounded-right form-control is-valid"
        readonly=""
        rows="3"
      >
        3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb
      </textarea>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Private Key (SK)
        </span>
      </div>
      <textarea
        aria-label="privateKey"
        class="form-control"
        readonly=""
        rows="3"
      >
        ◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦
      </textarea>
      <div
        class="input-group-append"
      >
        <span
          class="c1 rounded-right input-group-text"
        >
          <span
            aria-label="Key Reveal Eye"
            class="c2"
            role="img"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
              />
              <path
                d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
              />
            </svg>
             
          </span>
        </span>
      </div>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0 1rem;
  padding: 1em;
  border-radius: 6px;
  border: 1px solid black;
  background-color: #1f1f1f;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-4"
  >
    <form
      aria-label="Sign Form"
      class="c0 col-12 col-lg-5"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Public Key
          </span>
        </div>
        <input
          aria-label="Sender Public Key"
          class="text-truncate rounded-right form-control"
          name="from"
          readonly=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Used to verify transaction was signed using your private key
      </small>
      <div
        class="my-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate rounded-right form-control"
          name="to"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-2 input-group"
      >
        <input
          aria-label="Sign Amount"
          class="form-control"
          name="amount"
          placeholder="1.00"
          required=""
          step="any"
          type="number"
          value=""
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Sign Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          rows="2"
        />
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Private Key
          </span>
        </div>
        <input
          aria-label="Sender Private Key"
          class="text-truncate form-control"
          name="fromSK"
          readonly=""
          type="text"
          value="308187020100301306072a8648ce3d020106082a8648ce3d030107046d306b020101042047979df7cebe59dd7bf901"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Not shared with anyone, keep this secret!
      </small>
      <button
        aria-label="Sign Button"
        class="mt-2 btn btn-primary btn-block"
        type="submit"
      >
        <b>
          Sign
        </b>
      </button>
    </form>
    <form
      aria-label="Send Form"
      class="c0 col-12 col-lg-5 my-2 my-lg-0"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate form-control"
          name="receiver-pk"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Make sure this matches the value used when signing
      </small>
      <div
        class="my-2 input-group"
      >
        <input
          aria-label="Send Amount"
          class="form-control"
          name="amount"
          readonly=""
          type="number"
          value="0.00"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Send Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          readonly=""
          rows="4"
        />
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Transaction Signature
          </span>
        </div>
        <input
          aria-label="Transaction Signature"
          class="text-truncate form-control"
          name="sig"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Receiver uses this along with your public key to verify transaction
      </small>
      <button
        aria-label="Send Button"
        class="mt-2 btn btn-primary btn-block"
        disabled=""
        type="submit"
      >
        <b>
          Send
        </b>
      </button>
    </form>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  margin: 1em 0.5em;
  padding: 1em;
  width: 14rem;
}

<div
    class="container-fluid mb-2"
  >
    <h3
      class="font-weight-bold"
    >
      Users
    </h3>
    <div
      class="row flex-nowrap overflow-auto bg-dark mx-1 px-2 rounded"
    >
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="1000"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="111.11"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599baef"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="222.22"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`copies public key on focus, pages and fills out sign form, signs, sends 2`] = `
<DocumentFragment>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0.25em 0.5em;
  word-wrap: break-word;
}

.c2:hover {
  cursor: pointer;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-5"
  >
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Public Key (PK)
        </span>
      </div>
      <textarea
        aria-label="publicKey"
        class="rounded-right form-control"
        readonly=""
        rows="3"
      >
        3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb
      </textarea>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Private Key (SK)
        </span>
      </div>
      <textarea
        aria-label="privateKey"
        class="form-control"
        readonly=""
        rows="3"
      >
        ◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦
      </textarea>
      <div
        class="input-group-append"
      >
        <span
          class="c1 rounded-right input-group-text"
        >
          <span
            aria-label="Key Reveal Eye"
            class="c2"
            role="img"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
              />
              <path
                d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
              />
            </svg>
             
          </span>
        </span>
      </div>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0 1rem;
  padding: 1em;
  border-radius: 6px;
  border: 1px solid black;
  background-color: #1f1f1f;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-4"
  >
    <form
      aria-label="Sign Form"
      class="c0 col-12 col-lg-5"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Public Key
          </span>
        </div>
        <input
          aria-label="Sender Public Key"
          class="text-truncate rounded-right form-control"
          name="from"
          readonly=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Used to verify transaction was signed using your private key
      </small>
      <div
        class="my-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate rounded-right form-control is-valid"
          name="to"
          required=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
        />
      </div>
      <div
        class="mb-2 input-group"
      >
        <input
          aria-label="Sign Amount"
          class="form-control is-valid"
          name="amount"
          placeholder="1.00"
          required=""
          step="any"
          type="number"
          value="111"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Sign Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          rows="2"
        >
          aaa
        </textarea>
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Private Key
          </span>
        </div>
        <input
          aria-label="Sender Private Key"
          class="text-truncate form-control"
          name="fromSK"
          readonly=""
          type="text"
          value="308187020100301306072a8648ce3d020106082a8648ce3d030107046d306b020101042047979df7cebe59dd7bf901"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Not shared with anyone, keep this secret!
      </small>
      <button
        aria-label="Sign Button"
        class="mt-2 btn btn-primary btn-block"
        type="submit"
      >
        <b>
          Sign
        </b>
      </button>
    </form>
    <form
      aria-label="Send Form"
      class="c0 col-12 col-lg-5 my-2 my-lg-0"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate form-control"
          name="receiver-pk"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Make sure this matches the value used when signing
      </small>
      <div
        class="my-2 input-group"
      >
        <input
          aria-label="Send Amount"
          class="form-control"
          name="amount"
          readonly=""
          type="number"
          value="0.00"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Send Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          readonly=""
          rows="4"
        />
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Transaction Signature
          </span>
        </div>
        <input
          aria-label="Transaction Signature"
          class="text-truncate form-control"
          name="sig"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Receiver uses this along with your public key to verify transaction
      </small>
      <button
        aria-label="Send Button"
        class="mt-2 btn btn-primary btn-block"
        disabled=""
        type="submit"
      >
        <b>
          Send
        </b>
      </button>
    </form>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  margin: 1em 0.5em;
  padding: 1em;
  width: 14rem;
}

<div
    class="container-fluid mb-2"
  >
    <h3
      class="font-weight-bold"
    >
      Users
    </h3>
    <div
      class="row flex-nowrap overflow-auto bg-dark mx-1 px-2 rounded"
    >
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="1000"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="111.11"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599baef"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="222.22"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`copies public key on focus, pages and fills out sign form, signs, sends 3`] = `
<DocumentFragment>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0.25em 0.5em;
  word-wrap: break-word;
}

.c2:hover {
  cursor: pointer;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-5"
  >
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Public Key (PK)
        </span>
      </div>
      <textarea
        aria-label="publicKey"
        class="rounded-right form-control"
        readonly=""
        rows="3"
      >
        3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb
      </textarea>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Private Key (SK)
        </span>
      </div>
      <textarea
        aria-label="privateKey"
        class="form-control"
        readonly=""
        rows="3"
      >
        ◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦
      </textarea>
      <div
        class="input-group-append"
      >
        <span
          class="c1 rounded-right input-group-text"
        >
          <span
            aria-label="Key Reveal Eye"
            class="c2"
            role="img"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
              />
              <path
                d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
              />
            </svg>
             
          </span>
        </span>
      </div>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0 1rem;
  padding: 1em;
  border-radius: 6px;
  border: 1px solid black;
  background-color: #1f1f1f;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-4"
  >
    <form
      aria-label="Sign Form"
      class="c0 col-12 col-lg-5"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Public Key
          </span>
        </div>
        <input
          aria-label="Sender Public Key"
          class="text-truncate rounded-right form-control"
          name="from"
          readonly=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Used to verify transaction was signed using your private key
      </small>
      <div
        class="my-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate rounded-right form-control is-valid"
          name="to"
          readonly=""
          required=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
        />
      </div>
      <div
        class="mb-2 input-group"
      >
        <input
          aria-label="Sign Amount"
          class="form-control is-valid"
          name="amount"
          placeholder="1.00"
          readonly=""
          required=""
          step="any"
          type="number"
          value="111"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Sign Message"
          class="form-control is-valid"
          name="msg"
          placeholder="optional message..."
          readonly=""
          rows="2"
        >
          aaa
        </textarea>
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Private Key
          </span>
        </div>
        <input
          aria-label="Sender Private Key"
          class="text-truncate form-control"
          name="fromSK"
          readonly=""
          type="text"
          value="308187020100301306072a8648ce3d020106082a8648ce3d030107046d306b020101042047979df7cebe59dd7bf901"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Not shared with anyone, keep this secret!
      </small>
      <button
        aria-label="Sign Button"
        class="mt-2 btn btn-success btn-block"
        disabled=""
        type="submit"
      >
        <b>
          Signed
        </b>
      </button>
    </form>
    <form
      aria-label="Send Form"
      class="c0 col-12 col-lg-5 my-2 my-lg-0"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate form-control"
          name="receiver-pk"
          readonly=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Make sure this matches the value used when signing
      </small>
      <div
        class="my-2 input-group"
      >
        <input
          aria-label="Send Amount"
          class="form-control"
          name="amount"
          readonly=""
          type="number"
          value="111"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Send Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          readonly=""
          rows="4"
        >
          aaa
        </textarea>
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Transaction Signature
          </span>
        </div>
        <input
          aria-label="Transaction Signature"
          class="text-truncate form-control"
          name="sig"
          readonly=""
          type="text"
          value="random message"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Receiver uses this along with your public key to verify transaction
      </small>
      <button
        aria-label="Send Button"
        class="mt-2 btn btn-primary btn-block"
        type="submit"
      >
        <b>
          Send
        </b>
      </button>
    </form>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  margin: 1em 0.5em;
  padding: 1em;
  width: 14rem;
}

<div
    class="container-fluid mb-2"
  >
    <h3
      class="font-weight-bold"
    >
      Users
    </h3>
    <div
      class="row flex-nowrap overflow-auto bg-dark mx-1 px-2 rounded"
    >
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="1000"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="111.11"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599baef"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="222.22"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`copies public key on focus, pages and fills out sign form, signs, sends 4`] = `
<DocumentFragment>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0.25em 0.5em;
  word-wrap: break-word;
}

.c2:hover {
  cursor: pointer;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-5"
  >
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Public Key (PK)
        </span>
      </div>
      <textarea
        aria-label="publicKey"
        class="rounded-right form-control"
        readonly=""
        rows="3"
      >
        3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb
      </textarea>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Private Key (SK)
        </span>
      </div>
      <textarea
        aria-label="privateKey"
        class="form-control"
        readonly=""
        rows="3"
      >
        ◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦
      </textarea>
      <div
        class="input-group-append"
      >
        <span
          class="c1 rounded-right input-group-text"
        >
          <span
            aria-label="Key Reveal Eye"
            class="c2"
            role="img"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
              />
              <path
                d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
              />
            </svg>
             
          </span>
        </span>
      </div>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0 1rem;
  padding: 1em;
  border-radius: 6px;
  border: 1px solid black;
  background-color: #1f1f1f;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-4"
  >
    <form
      aria-label="Sign Form"
      class="c0 col-12 col-lg-5"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Public Key
          </span>
        </div>
        <input
          aria-label="Sender Public Key"
          class="text-truncate rounded-right form-control"
          name="from"
          readonly=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Used to verify transaction was signed using your private key
      </small>
      <div
        class="my-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate rounded-right form-control is-valid"
          name="to"
          required=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
        />
      </div>
      <div
        class="mb-2 input-group"
      >
        <input
          aria-label="Sign Amount"
          class="form-control is-valid"
          name="amount"
          placeholder="1.00"
          required=""
          step="any"
          type="number"
          value="111"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Sign Message"
          class="form-control is-valid"
          name="msg"
          placeholder="optional message..."
          rows="2"
        >
          aaa
        </textarea>
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Private Key
          </span>
        </div>
        <input
          aria-label="Sender Private Key"
          class="text-truncate form-control"
          name="fromSK"
          readonly=""
          type="text"
          value="308187020100301306072a8648ce3d020106082a8648ce3d030107046d306b020101042047979df7cebe59dd7bf901"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Not shared with anyone, keep this secret!
      </small>
      <button
        aria-label="Sign Button"
        class="mt-2 btn btn-primary btn-block"
        type="submit"
      >
        <b>
          Sign
        </b>
      </button>
    </form>
    <form
      aria-label="Send Form"
      class="c0 col-12 col-lg-5 my-2 my-lg-0"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate form-control"
          name="receiver-pk"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Make sure this matches the value used when signing
      </small>
      <div
        class="my-2 input-group"
      >
        <input
          aria-label="Send Amount"
          class="form-control"
          name="amount"
          readonly=""
          type="number"
          value="0.00"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Send Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          readonly=""
          rows="4"
        />
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Transaction Signature
          </span>
        </div>
        <input
          aria-label="Transaction Signature"
          class="text-truncate form-control"
          name="sig"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Receiver uses this along with your public key to verify transaction
      </small>
      <button
        aria-label="Send Button"
        class="mt-2 btn btn-success btn-block"
        disabled=""
        type="submit"
      >
        <b>
          Sent
        </b>
      </button>
    </form>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  margin: 1em 0.5em;
  padding: 1em;
  width: 14rem;
}

<div
    class="container-fluid mb-2"
  >
    <h3
      class="font-weight-bold"
    >
      Users
    </h3>
    <div
      class="row flex-nowrap overflow-auto bg-dark mx-1 px-2 rounded"
    >
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="1000"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="111.11"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599baef"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="222.22"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0.25em 0.5em;
  word-wrap: break-word;
}

.c2:hover {
  cursor: pointer;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-5"
  >
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Public Key (PK)
        </span>
      </div>
      <textarea
        aria-label="publicKey"
        class="rounded-right form-control"
        readonly=""
        rows="3"
      >
        3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb
      </textarea>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
    <div
      class="c0 col-12 col-lg-8 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Private Key (SK)
        </span>
      </div>
      <textarea
        aria-label="privateKey"
        class="form-control"
        readonly=""
        rows="3"
      >
        ◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦◦
      </textarea>
      <div
        class="input-group-append"
      >
        <span
          class="c1 rounded-right input-group-text"
        >
          <span
            aria-label="Key Reveal Eye"
            class="c2"
            role="img"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
              />
              <path
                d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
              />
            </svg>
             
          </span>
        </span>
      </div>
      <div
        class="valid-feedback"
      >
        Copied to clipboard!
      </div>
    </div>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0 1rem;
  padding: 1em;
  border-radius: 6px;
  border: 1px solid black;
  background-color: #1f1f1f;
}

<div
    class="container-fluid d-flex justify-content-center mx-auto row my-4"
  >
    <form
      aria-label="Sign Form"
      class="c0 col-12 col-lg-5"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Public Key
          </span>
        </div>
        <input
          aria-label="Sender Public Key"
          class="text-truncate rounded-right form-control"
          name="from"
          readonly=""
          type="text"
          value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Used to verify transaction was signed using your private key
      </small>
      <div
        class="my-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate rounded-right form-control"
          name="to"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-2 input-group"
      >
        <input
          aria-label="Sign Amount"
          class="form-control"
          name="amount"
          placeholder="1.00"
          required=""
          step="any"
          type="number"
          value=""
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Sign Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          rows="2"
        />
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Sender Private Key
          </span>
        </div>
        <input
          aria-label="Sender Private Key"
          class="text-truncate form-control"
          name="fromSK"
          readonly=""
          type="text"
          value="308187020100301306072a8648ce3d020106082a8648ce3d030107046d306b020101042047979df7cebe59dd7bf901"
        />
      </div>
      <small
        class="text-light form-text"
      >
        Not shared with anyone, keep this secret!
      </small>
      <button
        aria-label="Sign Button"
        class="mt-2 btn btn-primary btn-block"
        type="submit"
      >
        <b>
          Sign
        </b>
      </button>
    </form>
    <form
      aria-label="Send Form"
      class="c0 col-12 col-lg-5 my-2 my-lg-0"
      novalidate=""
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Receiver Public Key
          </span>
        </div>
        <input
          aria-label="Receiver PK"
          class="text-truncate form-control"
          name="receiver-pk"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Make sure this matches the value used when signing
      </small>
      <div
        class="my-2 input-group"
      >
        <input
          aria-label="Send Amount"
          class="form-control"
          name="amount"
          readonly=""
          type="number"
          value="0.00"
        />
        <div
          class="input-group-append"
        >
          <span
            class="c1 rounded-right border-left-0 input-group-text"
          >
            LC
          </span>
        </div>
      </div>
      <div
        class="mb-2 input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Send Message"
          class="form-control"
          name="msg"
          placeholder="optional message..."
          readonly=""
          rows="4"
        />
      </div>
      <div
        class="input-group"
      >
        <div
          class="input-group-prepend"
        >
          <span
            class="c1 input-group-text"
          >
            Transaction Signature
          </span>
        </div>
        <input
          aria-label="Transaction Signature"
          class="text-truncate form-control"
          name="sig"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <small
        class="text-light form-text"
      >
        Receiver uses this along with your public key to verify transaction
      </small>
      <button
        aria-label="Send Button"
        class="mt-2 btn btn-primary btn-block"
        disabled=""
        type="submit"
      >
        <b>
          Send
        </b>
      </button>
    </form>
  </div>
  .c1.c1.c1 {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  margin: 1em 0.5em;
  padding: 1em;
  width: 14rem;
}

<div
    class="container-fluid mb-2"
  >
    <h3
      class="font-weight-bold"
    >
      Users
    </h3>
    <div
      class="row flex-nowrap overflow-auto bg-dark mx-1 px-2 rounded"
    >
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599babb"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="1000"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599bacd"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="111.11"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
      <form
        class="c0 rounded flex-shrink-0"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="c1 input-group-text"
            >
              🔑
            </span>
          </div>
          <input
            aria-label="User Public Key"
            class="text-truncate rounded-right form-control"
            readonly=""
            type="text"
            value="3059301306072a8648ce3d020106082a8648ce3d030107034200048fa7d69599baef"
          />
          <div
            class="valid-feedback"
          >
            Copied to clipboard
          </div>
        </div>
        <div
          class="mt-2 input-group"
        >
          <input
            aria-label="balance"
            class="form-control"
            disabled=""
            type="number"
            value="222.22"
          />
          <div
            class="input-group-append"
          >
            <span
              class="c1 input-group-text"
            >
              LC
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
